[package]
name = "cyberpunk_mod_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
tui-logger = "0.8.1"
log = "0.4.17"
tokio = { version = "1.23.0", features = ["full"] }
eyre = "0.6"
compress-tools = "0.14.0"
walkdir = "2.3.2"