[package]
name = "cyberpunk_mod_manager"
version = "1.0.0"
edition = "2021"
authors = ["Yash Sharma <yashs662@gmail.com>"]
description = "A mod manager for Cyberpunk 2077"
repository = "https://github.com/yashs662/cyberpunk_mod_manager"
license = "GNU General Public License v3.0"
keywords = ["TUI", "mod manager", "cyberpunk", "cyberpunk 2077", "cyberpunk2077", "cyberpunk mod manager",
    "cyberpunk 2077 mod manager", "cyberpunk2077 mod manager", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
tui-logger = "0.8.1"
log = "0.4.17"
tokio = { version = "1.23.0", features = ["full"] }
eyre = "0.6"
compress-tools = "0.14.0"
walkdir = "2.3.2"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
fs_extra = "1.2.0"